--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Navbar-->
             <div class="navbar-top">
                 <div class="logo">
-                    <img onclick="homePage()" src="./assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
+                    <img onclick="homePage()" src="/assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
                 </div>
                 <div class="company-name">
                     <span onclick="homePage()">CAMPBELL RIVER WHALE WATCHING & ADVENTURE TOURS</span>
