--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         
         <!--End of Navbar-->
         <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" > <!--poster="assets/bearscene.jpg"-->
-            <source src="./assets/Bear Trip Banner.mp4" type="video/mp4">
+            <source src="./assets/Bear Trip Banner.mp4" type="video/mp4" poster="assets/bearscene.jpg">
             Your browser does not support the video tag.
         </video>
         <!-- need to figure out how to do this (look at the css file for more info
