--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campbell River Whale Watching and Adventure Tours</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="hometest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,11 @@
 </head>
 <body>
     <!--Containers-->
-
-    <!--Navbar and Video Container-->
     <div class="top-container">
         <!--Navbar-->
             <div class="navbar-top">
                 <div class="logo">
-                    <img onclick="homePage()" src="assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
+                    <img onclick="homePage()" src="./assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
                 </div>
                 <div class="company-name">
                     <span onclick="homePage()">CAMPBELL RIVER WHALE WATCHING & ADVENTURE TOURS</span>
@@ -78,18 +76,14 @@
             </div>
         
         <!--End of Navbar-->
-        <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" > <!--poster="assets/bearscene.jpg"-->
-            <source src="./assets/Bear Trip Banner.mp4" type="video/mp4" poster="assets/bearscene.jpg">
-            Your browser does not support the video tag.
-        </video>
-        <!-- need to figure out how to do this (look at the css file for more info
-            <div class="vignette"></div>-->
     </div>
-    <!--End of Navbar and Video Container-->
+
 
     <div class="mid-container" id="midContainer">
-
-
+        <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" > <!--poster="assets/bearscene.jpg"-->
+            <source src="./assets/Bear Trip Banner.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
 
 
