--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campbell River Whale Watching and Adventure Tours</title>
-    <link rel="stylesheet" href="hometest.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
         <!--Navbar-->
             <div class="navbar-top">
                 <div class="logo">
-                    <img onclick="homePage()" src="./assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
+                    <img onclick="homePage()" src="assets/logotransparent.png" alt="Campbell River Whale Watching Logo" width="auto" height="68">
                 </div>
                 <div class="company-name">
                     <span onclick="homePage()">CAMPBELL RIVER WHALE WATCHING & ADVENTURE TOURS</span>
