--- a/index.html
+++ b/index.html
@@ -31,46 +31,46 @@
                             <div class="tours-menu" id="toursMenu">
                                 <div class="menu-item">
                                     <a onclick="whaleTourPage()">
-                                        <img src="/assets/whaletour.webp" alt="Whale Watching" class="navtourimg1">
+                                        <img src="assets/whaletour.webp" alt="Whale Watching" class="navtourimg1">
                                         <span>WHALE WATCHING</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="grizzlyTourPage()">
-                                        <img src="/assets/grizzlytour.webp" alt="Grizzly Bear Tours" class="navtourimg2">
+                                        <img src="assets/grizzlytour.webp" alt="Grizzly Bear Tours" class="navtourimg2">
                                         <span>GRIZZLY TOURS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="kayakTourPage()">
-                                        <img src="/assets/kayaktour.webp" alt="Kayaking Tours" class="navtourimg3">
+                                        <img src="assets/kayaktour.webp" alt="Kayaking Tours" class="navtourimg3">
                                         <span>KAYAKING TOURS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="photographyPage()">
-                                        <img src="/assets/photography.webp" alt="Photography/ Eagle Tours" class="navtourimg4">
+                                        <img src="assets/photography.webp" alt="Photography/ Eagle Tours" class="navtourimg4">
                                         <span>PHOTOGRAPHY CLASS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="rapidsTourPage()">
-                                        <img src="/assets/rapidstour.webp" alt="Ocean Rapids Tours" class="navtourimg5">
+                                        <img src="assets/rapidstour.webp" alt="Ocean Rapids Tours" class="navtourimg5">
                                         <span>OCEAN RAPIDS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="allTours()">
-                                        <img src="/assets/bearwatertour.webp" alt="Browse All Tours" class="navtourimg6">
+                                        <img src="assets/bearwatertour.webp" alt="Browse All Tours" class="navtourimg6">
                                         <span>BROWSE ALL TOURS</span>
                                     </a>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/navpages/packages.html">PACKAGES</a></li>
-                        <li><a href="/navpages/about.html">ABOUT US</a></li>
-                        <li><a href="/navpages/blog.html">BLOG</a></li>
-                        <li><a href="/navpages/contact.html">CONTACT</a></li>
+                        <li><a href="navpages/packages.html">PACKAGES</a></li>
+                        <li><a href="navpages/about.html">ABOUT US</a></li>
+                        <li><a href="navpages/blog.html">BLOG</a></li>
+                        <li><a href="navpages/contact.html">CONTACT</a></li>
                     <button onclick="bookingPage()">BOOK MY TOUR</button>
                 </div>
             </div>
@@ -80,8 +80,8 @@
 
 
     <div class="mid-container" id="midContainer">
-        <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" > <!--poster="assets/bearscene.jpg"-->
-            <source src="./assets/Bear Trip Banner.mp4" type="video/mp4">
+        <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" >
+            <source src="assets/Bear Trip Banner.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
