--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="kayakTourPage()">
-                                        <img src="/assets/kayaktour.webp" alt="Kayaking Tours" class="navtourimg3">
+                                        <img src="assets/kayaktour.webp" alt="Kayaking Tours" class="navtourimg3">
                                         <span>KAYAKING TOURS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="photographyPage()">
-                                        <img src="../assets/photography.webp" alt="Photography/ Eagle Tours" class="navtourimg4">
+                                        <img src="assets/photography.webp" alt="Photography/ Eagle Tours" class="navtourimg4">
                                         <span>PHOTOGRAPHY CLASS</span>
                                     </a>
                                 </div>
                                 <div class="menu-item">
                                     <a onclick="rapidsTourPage()">
-                                        <img src="./assets/rapidstour.webp" alt="Ocean Rapids Tours" class="navtourimg5">
+                                        <img src="assets/rapidstour.webp" alt="Ocean Rapids Tours" class="navtourimg5">
                                         <span>OCEAN RAPIDS</span>
                                     </a>
                                 </div>
@@ -81,7 +81,7 @@
 
     <div class="mid-container" id="midContainer">
         <video id="big-vid" width="100%" height="auto" autoplay muted loop class="big-vid" >
-            <source src="assets/Bear Trip Banner.mp4" type="video/mp4">
+            <source src="https://www.youtube.com/watch?v=ch-1mHGTbeo" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
